<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount">34.60</string>

    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>

    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>

    <string name="increase">+</string>
    <string name="decrease">-</string>

    <string name="tip_amount_label"> Tip</string>
    <string name="tip_amount">$0.00</string>

    <string name="rounding">Rounding</string>

    <string-array name="splitbill_array">
        <item>No</item>
        <item>2 ways</item>
        <item>3 ways</item>
        <item>4 ways</item>

    </string-array>

</resources>
